5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4372/executions/1577_579.log
== SUBMITION (2019-03-21 18:25:07) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao."))
-- EXECUTION TIME:
0.16669
-- ERROR:
  File "/home/codebench/codes/1577/579/main.py", line 1
    print("A UFAM tem", 2016 - 1909, "anos de fundacao."))
                                                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:25:27) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao."))
-- EXECUTION TIME:
0.165076
-- ERROR:
  File "/home/codebench/codes/1577/579/main.py", line 1
    print("A UFAM tem", 2016 - 1909, "anos de fundacao."))
                                                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:26:19) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao."))
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2016 - 1909, "anos de fundacao."))
                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:26:39) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.157519
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
